UX: Moves the overflow property to #main to prevent vertical scrollbars
`#main` does not have a fixed height and will adjust to its content. Moving the overflow property here prevents some scenarios where the spinner - while it spins - causes the browser to render vertical scroll bars.

This should have no effects on the visuals of the banner. It only prevents some undesirable effects like the spinner causing intermittent vertical scroll bars on some badge pages.

--- a/common/common.scss
+++ b/common/common.scss
@@ -183,8 +183,8 @@
 ////////////// Full Width //////////////
 
 @if $full_width_banner == "true" {
-  body {
-    overflow-x: hidden; // Needed to compensate for the overflow caused by the vertical scrollbar
+  #main {
+    overflow: hidden; // Needed to compensate for the overflow caused by the vertical scrollbar
 
     .banner-box {
       margin-top: -2em;
